fixed save button on mobile

--- a/src/Editor.css
+++ b/src/Editor.css
@@ -85,11 +85,13 @@
   cursor: pointer;
 }
 .save-button.mobile {
-  top: 36px;
+  top: 37px;
   right: 0;
-  height: 49px;
+  height: 50px;
   width: calc(100% - 50px);
   border-radius: 0;
+  border: solid 1px #777;
+  border-left: none;
 }
 
 .editor .add-tab {
